# easy-dataset

./: ELECTRON_BUILD.md  ELECTRON_PYTHON_INTEGRATION.md  package.json
.kiro/specs/js-to-python-conversion/: design.md  requirements.md  tasks.md
electron/: main.js
electron/modules/: ipc-handlers.js  python-server.js  python-updater.js
python-backend/: .gitignore  API_FEATURES_IMPLEMENTATION.md  CHANGELOG.md  EXPORT_IMPLEMENTATION.md  FILE_PROCESSORS_README.md  I18N_IMPLEMENTATION.md  I18N_QUICK_REFERENCE.md  I18N_SUMMARY.md  IMAGE_DATASET_IMPLEMENTATION.md  LLM_IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION_README.md  MANIFEST.in  Makefile  PROMPT_TEMPLATES_README.md  README.md  SCHEMA_VERIFICATION.md  TASK_SYSTEM_IMPLEMENTATION.md  TEXT_SPLITTER_README.md  UPDATE_SYSTEM.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.bat  setup-dev.sh  setup.py
python-backend/alembic/: env.py
python-backend/easy_dataset/: __init__.py  cli.py
python-backend/easy_dataset/core/: __init__.py  easy_dataset.py  file_processor.py  text_splitter.py
python-backend/easy_dataset/core/processors/: __init__.py  docx_processor.py  epub_processor.py  markdown_processor.py  pdf_processor.py  registry.py  txt_processor.py
python-backend/easy_dataset/database/: __init__.py  backup.py  base.py  connection.py
python-backend/easy_dataset/llm/: __init__.py  base.py  service.py
python-backend/easy_dataset/llm/prompts/: __init__.py  answer_prompts.py  eval_prompts.py  question_prompts.py
python-backend/easy_dataset/llm/providers/: __init__.py  gemini_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
python-backend/easy_dataset/models/: __init__.py  chunk.py  config.py  conversation.py  dataset.py  file.py  ga_pair.py  image.py  image_dataset.py  llm.py  project.py  prompt.py  question.py  tag.py  task.py  template.py
python-backend/easy_dataset/schemas/: __init__.py  chunk.py  config.py  dataset.py  file.py  project.py  question.py  task.py
python-backend/easy_dataset/services/: __init__.py  exporter.py  image_dataset_service.py  image_service.py  task_service.py
python-backend/easy_dataset/services/exporters/: __init__.py  base_exporter.py  csv_exporter.py  huggingface_exporter.py  image_exporter.py  json_exporter.py  jsonl_exporter.py  llamafactory_exporter.py
python-backend/easy_dataset/services/tasks/: __init__.py  answer_generation.py  conversation_generation.py  data_cleaning.py  dataset_evaluation.py  file_processing.py  image_question_generation.py  question_generation.py
python-backend/easy_dataset/utils/: __init__.py  i18n.py  query.py  updater.py
python-backend/easy_dataset_server/: __init__.py  app.py  config.py  dependencies.py
python-backend/easy_dataset_server/api/: __init__.py  backup.py  chunks.py  datasets.py  files.py  projects.py  questions.py  updates.py  websocket.py
python-backend/easy_dataset_server/middleware/: error_handler.py
python-backend/examples/: batch_processing.py  custom_frontend.py  embedded_usage.py  fastapi_i18n_example.py  file_processing_example.py  i18n_usage_example.py  llm_usage_example.py  prompt_usage_example.py  standalone_server.py  text_splitting_example.py
python-backend/locales/en/: messages.json
python-backend/locales/tr/: messages.json
python-backend/locales/zh-CN/: messages.json
python-backend/tests/: __init__.py  conftest.py  test_dataset_api.py  test_file_processors.py  test_i18n.py  test_image_functionality.py  test_llm_imports.py  test_package_structure.py  test_prompt_templates.py  test_schema_orm_integration.py  test_schemas.py  test_text_splitter.py
scripts/: afterPack.js  prepare-python-build.js
