[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-dataset"
version = "2.0.0"
description = "A reusable Python package for creating LLM fine-tuning datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Easy Dataset Contributors"}
]
keywords = ["llm", "dataset", "fine-tuning", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
    "ebooklib>=0.18",
    "chardet>=5.0.0",
    "markdown>=3.4.0",
    "nanoid>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
    "alembic>=1.12.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
llm = [
    "litellm>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
]
desktop = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "hypothesis>=6.92.0",
]
all = [
    "easy-dataset[server,llm,desktop,dev]",
]

[project.scripts]
easy-dataset = "easy_dataset.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/easy-dataset-python"
Documentation = "https://easy-dataset.readthedocs.io"
Repository = "https://github.com/yourusername/easy-dataset-python"
Issues = "https://github.com/yourusername/easy-dataset-python/issues"

[tool.setuptools]
packages = ["easy_dataset", "easy_dataset_server"]

[tool.setuptools.package-data]
easy_dataset = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ebooklib.*",
    "nanoid.*",
    "ollama.*",
    "litellm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=easy_dataset --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["easy_dataset"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
